# gtestExample

./: CMakeLists.txt  README.md  build.bat  build.sh
CMakeModules/: CodeCoverage.cmake
